# HOPE-Minibot

./: .gitignore  270126 НОРЕ + ЧАТ 23.35 выполни Phase 2.5 интеграцию.txt  AllowList.core.txt  AllowList.dev.txt  AllowList.spider.txt  AllowList.txt  CLAUDE_TASK_BINANCE_ONLINE_GATE_10L.txt  CLAUDE_TASK_BINANCE_ONLINE_GATE_FULL.md  CLAUDE_TASK_COMMIT_RULES_V2.md  CLEANUP_LIST.md  CUserskirillDevAppDataLocalTempautotrader_b64.txt  TESTNET_CHECKLIST.md  __main__.py  _redact.py  adaptive_risk_manager_v2.py  atomic_jsonl_queue.py  audit.py  barfeed.py  brain.py  check_processes.ps1  check_sent.py  clean_env.py  cli.py  config.py  config_manager.py  core.py  daily_limits.py  exchange_client.py  execution_layer.py  executor.py  grid.py  guards.py  health.py  health_v5.py  health_v5_backup_20251130.py  hope_audit.py  hope_cloud.yaml  hope_diagnostic.py  hope_diagnostic_v2.py  hope_liquidity_guard.py  (+88 more)
ai_gateway/: __init__.py  __main__.py  base_module.py  config.py  contracts.py  diagnostics.py  jsonl_writer.py  scheduler.py  server.py  status_manager.py  telegram_panel.py
config/: AllowList.spider.txt  __init__.py  corrected_settings_v2.py  heavy_coins_blacklist.py  legacy_net_allowlist.json  scalping_100.json  signal_filter_rules.json  sources_registry.json  task_scheduler_bot.xml  task_scheduler_spider.xml  trade_micro.json
contracts/: NORE_TZ_RU.md
core/: __init__.py  adaptive_confidence.py  adaptive_targets.py  adaptive_tp_engine.py  adaptive_trading.py  ai_calibrator.py  ai_reader.py  ai_trade_learner.py  allowlist_manager.py  anti_chase_filter.py  atomic_io.py  (+77 more)
(+554 files in other folders)
