[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hope-trading-bot"
version = "0.1.0"
description = "HOPE Trading Intelligence System"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tests*"]
